[tool.poetry]
name = "rzdfinderbot"
version = "0.1.0"
description = ""
authors = ["Bathris <bathris12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.3.0"
httpx = "^0.26.0"
aiocache = "^0.12.2"
pydantic = "^2.5.3"
redis = "^5.0.1"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
fake-useragent = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

